Fixed z-index issue

--- a/template/templates/mathany/css/modules.css
+++ b/template/templates/mathany/css/modules.css
@@ -5,6 +5,7 @@
 	position: absolute;
 	right: 0;
 	top: -4px;
+	z-index: 5;
 }
 .moduletable_hmenu ul {
 	font-size: 14px;
